--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,10 +29,10 @@
 }
 @keyframes hide-loader {
   from {
-    opacity: 1;
+    transform: translateX(0px);
   }
   to {
-    opacity: 0;
+    transform: translateX(6000px);
   }
 }
 * {
@@ -332,11 +332,11 @@ header img {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
   width: 100%;
   height: 100%;
-  z-index: 100;
   background-color: white;
-  animation: hide-loader 200ms 3000ms forwards;
+  animation: hide-loader 0ms 3000ms forwards;
 }
 
 .loader {
