--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -29,9 +29,9 @@
 
 @keyframes hide-loader {
     from {
-        opacity: 1;
+        transform: translateX(0px);
     }
     to {
-        opacity: 0;
+        transform: translateX(6000px);
     }
 }
