--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,10 +21,10 @@
 }
 @keyframes loader {
   from {
-    transform: scale(50%);
+    transform: scale(0.5);
   }
   to {
-    transform: scale(100%);
+    transform: scale(1);
   }
 }
 @keyframes hide-loader {
