--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -20,10 +20,10 @@
 
 @keyframes loader {
     from {
-        transform: scale(50%);
+        transform: scale(0.5);
     }
     to {
-        transform: scale(100%);
+        transform: scale(1);
     }
 }
 
